# AIS2203_Car

./: .gitignore  CMakeLists.txt  README.md
DATA/ONNXModels/: README.md
PythonCode/: Steering.py
Vision/: CMakeLists.txt
executables/: CMakeLists.txt
executables/GeneralComunications/: CMakeLists.txt  generalCom.cpp
executables/Lidar/: CMakeLists.txt  testLidar.cpp
executables/MasterMind/: MasterMind.cpp
executables/RobotSensors/: CMakeLists.txt  testRobotSensors.cpp
executables/Vision/: CMakeLists.txt  testServer.cpp
include/GeneralComunication/: Data.hpp  GeneralComunication.hpp
include/Lidar/: LidarData.hpp  LidarUtils.hpp
include/ModelEstimation/: ModelEstimation.hpp  inference.hpp
include/RobotSensors/: RobotSensors.hpp
include/Vision/: Vision.hpp  utils.hpp
src/: CMakeLists.txt
src/GeneralComunication/: CMakeLists.txt  Data.cpp  GeneralComunication.cpp
src/Lidar/: CMakeLists.txt  LidarData.cpp  LidarUtils.cpp
src/ModelEstimation/: CMakeLists.txt  ModelEstimation.cpp  inference.cpp
src/RobotSensors/: CMakeLists.txt  RobotSensors.cpp
src/Vision/: CMakeLists.txt  Vision.cpp
